# ocr-scanned-pdf-converter

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml
docs/: PRD.md
docs/superpowers/plans/: 2026-04-26-accuracy-batch1.md  2026-04-28-accuracy-batch-3.md  2026-05-03-accuracy-batch-4.md  2026-05-09-accuracy-batch-5.md
docs/superpowers/specs/: 2026-04-26-accuracy-batch1-design.md  2026-04-27-accuracy-batch-2-design.md  2026-04-28-accuracy-batch-3-design.md  2026-05-03-accuracy-batch-4-design.md  2026-05-09-accuracy-batch-5-design.md
scripts/: diagnose_golden.py  probe_asset_ocr.py  probe_baseline_marks.py  probe_cross_row_assets.py  probe_letter_cells.py  probe_mark_density.py  probe_orphan_merges.py  probe_page4_rows.py  probe_tx_marks.py
src/ocr_ptr_pdf_converter/: __init__.py  cli.py  converter.py  extract.py  grid.py  header.py  markdown.py  ocr.py  orient.py  preprocess.py  render.py  schema.py
tests/: test_cli.py  test_converter.py  test_extract.py  test_golden.py  test_grid.py  test_header.py  test_markdown.py  test_marks.py  test_ocr.py  test_orient.py  test_preprocess.py  test_render.py  test_schema.py
tests/fixtures/: 9115728_expected.md
